Agrega estilos segundo ejercicio

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="header">
-    <h1>Receta: Ensalada</h1>
+    <h1 class="h1">Receta: Ensalada</h1>
     <img class="img" src="salad.png" />
   </header>
 
