falta centrar el formulario

--- a/ejercicio2-html-y-css/index.html
+++ b/ejercicio2-html-y-css/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
+  <form action="">
+    <h1>Login</h1>
 
+    <label for="email">Email</label>
+    <input type="text" id="email" name="email">
+
+    <label for="password">Password</label>
+    <input type="password" id="password name=" password>
+
+    <label for="genero">Genero</label>
+    <select name="genero" id="genero">
+      <option value="masculino">Masculino</option>
+      <option value="femenino">Femenino</option>
+      <option value="otro">Otro</option>
+    </select>
+
+    <div>
+      <input type="checkbox" name="tyc" id="tyc">
+      <label for="tyc">Acepto los terminos</label>
+    </div>
+
+    <div>
+      <button>Ingresar</button>
+    </div>
+
+
+
+
+
+  </form>
 </body>
 
 </html>
