formulario centrado, falta resolver bonus,cambios adidionales

--- a/ejercicio2-html-y-css/index.html
+++ b/ejercicio2-html-y-css/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
   <form action="">
     <h1>Login</h1>
 
@@ -31,7 +32,7 @@
       <label for="tyc">Acepto los terminos</label>
     </div>
 
-    <div>
+    <div class="button">
       <button>Ingresar</button>
     </div>
 
@@ -40,6 +41,8 @@
 
 
   </form>
+
+
 </body>
 
 </html>
